Updated darkmode settings, tweaked logos individually.

--- a/src/components/SoftwareLogos.astro
+++ b/src/components/SoftwareLogos.astro
@@ -3,11 +3,11 @@
 
 <div class="opacity-60">
   <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:px-8">
-    <div class="flex justify-center content-center flex-wrap dark:invert">
+    <div class="flex justify-center content-center flex-wrap">
       <div class="p-10">
-        <img class="h-12" src="/logos/php.svg" alt="PHP logo" />
+        <img class="h-12 dark:invert" src="/logos/php.svg" alt="PHP logo" />
       </div>
-      <div class="p-10 mt-2">
+      <div class="p-10 mt-2 dark:invert">
         <img class="h-6" src="/logos/node.svg" alt="Node.js logo" />
       </div>
       <div class="p-10">
@@ -15,13 +15,13 @@
       </div>
       <div class="p-10">
         <img
-          class="h-8 mt-1"
+          class="h-8 mt-1 dark:invert"
           src="/logos/postgresql.png"
           alt="PostgreSQL logo"
         />
       </div>
       <div class="p-10">
-        <img class="h-4 mt-3" src="/logos/nginx.svg" alt="nginx logo" />
+        <img class="h-4 mt-3 dark:invert" src="/logos/nginx.svg" alt="nginx logo" />
       </div>
       <div class="p-10">
         <img class="h-4 mt-3" src="/logos/apache.svg" alt="Apache logo" />
