--- a/src/components/FeaturedSponsors.astro
+++ b/src/components/FeaturedSponsors.astro
@@ -7,15 +7,17 @@ import featuredSponsors from "../featured-sponsors.json"
  * you need to add one.
  */
 const nudges = {
-  "Platform.sh": "mt-12 h-11",
-  Tag1: "h-9",
+  "Platform.sh": "mt-12 h-11 dark:invert",
+  Tag1: "h-9 dark:bg-white",
   "Oliver Wand": "h-12 w-12",
-  DrupalEasy: "h-10",
+  DrupalEasy: "h-10 dark:invert",
+  b13: "dark:invert",
+  "i-gelb": "dark:bg-white",
   "Redfin Solutions": "h-16 w-16",
-  MacStadium: "h-15",
-  Lullabot: "h-9",
+  MacStadium: "h-15 dark:bg-white",
+  Lullabot: "h-9 dark:bg-white",
   "Craft CMS": "h-11",
-  undpaul: "h-9",
+  undpaul: "h-9 dark:invert",
   "1xINTERNET": "h-11",
 }
 
@@ -44,7 +46,7 @@ featuredSponsors.map((sponsor) => {
         >
           <img
             src={sponsor.logo}
-            class="block w-auto h-full dark:invert"
+            class="block w-auto h-full"
             alt={`${sponsor.name} logo`}
           />
         </a>
