Updated darkmode settings, removed extra dark:text-white that are not needed.

--- a/src/components/quickstart/Cloud.astro
+++ b/src/components/quickstart/Cloud.astro
@@ -81,7 +81,7 @@ const { latestVersion } = Astro.props
 </div>
 
 <div class="prose dark:prose-invert">
-  <h2 class="text-3xl mt-24 dark:text-white">
+  <h2 class="text-3xl mt-24">
     <small class="block font-mono text-xs text-gray-500">2/2</small>Create a
     Project
   </h2>
@@ -120,7 +120,7 @@ const { latestVersion } = Astro.props
 </div>
 
 <div class="prose dark:prose-invert">
-  <h2 class="text-3xl mt-24 dark:text-white">Explore & Enjoy!</h2>
+  <h2 class="text-3xl mt-24">Explore & Enjoy!</h2>
 
   <p>
     Take a peek at your project’s new <code>.ddev/</code> directory. You can add
