--- a/src/components/quickstart/Linux.astro
+++ b/src/components/quickstart/Linux.astro
@@ -18,7 +18,7 @@ const { latestVersion } = Astro.props
     >.
   </p>
 
-  <h2 class="text-3xl mt-24 dark:text-white">
+  <h2 class="text-3xl mt-24">
     <small class="block font-mono text-xs text-gray-500">1/3</small>Install
     Docker
   </h2>
@@ -91,7 +91,7 @@ const { latestVersion } = Astro.props
 </div>
 
 <div class="prose dark:prose-invert">
-  <h2 class="text-3xl mt-24 dark:text-white">
+  <h2 class="text-3xl mt-24">
     <small class="block font-mono text-xs text-gray-500">2/3</small>Install DDEV
   </h2>
 
@@ -137,7 +137,7 @@ const { latestVersion } = Astro.props
 </div>
 
 <div class="prose dark:prose-invert">
-  <h2 class="text-3xl mt-24 dark:text-white">
+  <h2 class="text-3xl mt-24">
     <small class="block font-mono text-xs text-gray-500">3/3</small>Create a
     Project
   </h2>
@@ -179,7 +179,7 @@ const { latestVersion } = Astro.props
 </div>
 
 <div class="prose dark:prose-invert">
-  <h2 class="text-3xl mt-24 dark:text-white">Explore & Enjoy!</h2>
+  <h2 class="text-3xl mt-24">Explore & Enjoy!</h2>
 
   <p>
     Take a peek at your project’s new <code>.ddev/</code> directory. You can add
