--- a/src/components/quickstart/Windows.astro
+++ b/src/components/quickstart/Windows.astro
@@ -18,7 +18,7 @@ const { latestVersion } = Astro.props
     >.
   </p>
 
-  <h2 class="text-3xl mt-24 dark:text-white">
+  <h2 class="text-3xl mt-24">
     <small class="block font-mono text-xs text-gray-500">1/3</small>Install WSL2
     with Ubuntu
   </h2>
@@ -44,7 +44,7 @@ const { latestVersion } = Astro.props
 </div>
 
 <div class="prose dark:prose-invert">
-  <h2 class="text-3xl mt-24 dark:text-white">
+  <h2 class="text-3xl mt-24">
     <small class="block font-mono text-xs text-gray-500">2/3</small>Run the
     Install Script
   </h2>
@@ -67,7 +67,7 @@ const { latestVersion } = Astro.props
 </div>
 
 <div class="prose dark:prose-invert">
-  <h2 class="text-3xl mt-24 dark:text-white">
+  <h2 class="text-3xl mt-24">
     <small class="block font-mono text-xs text-gray-500">3/3</small>Create a
     Project
   </h2>
@@ -109,7 +109,7 @@ const { latestVersion } = Astro.props
 </div>
 
 <div class="prose dark:prose-invert">
-  <h2 class="text-3xl mt-24 dark:text-white">Explore & Enjoy!</h2>
+  <h2 class="text-3xl mt-24">Explore & Enjoy!</h2>
 
   <p>
     Take a peek at your project’s new <code>.ddev/</code> directory. You can add
