--- a/src/components/quickstart/Mac.astro
+++ b/src/components/quickstart/Mac.astro
@@ -18,7 +18,7 @@ const { latestVersion } = Astro.props
     >.
   </p>
 
-  <h2 class="text-3xl mt-24 dark:text-white">
+  <h2 class="text-3xl mt-24">
     <small class="block font-mono text-xs text-gray-500">1/3</small>Install
     Docker
   </h2>
@@ -55,7 +55,7 @@ const { latestVersion } = Astro.props
   <p>Confirm that you’ve now got a Docker provider:</p>
   <Terminal code={`→ docker -v\nDocker version 24.0.5, build ced0996`} />
 
-  <h2 class="text-3xl mt-24 dark:text-white">
+  <h2 class="text-3xl mt-24">
     <small class="block font-mono text-xs text-gray-500">2/3</small>Install DDEV
   </h2>
 </div>
@@ -79,7 +79,7 @@ const { latestVersion } = Astro.props
   <p>Confirm that you’ve now got DDEV installed: 🎉</p>
   <Terminal code={`→ ddev -v\nddev version ${latestVersion}`} />
 
-  <h2 class="text-3xl mt-24 dark:text-white">
+  <h2 class="text-3xl mt-24">
     <small class="block font-mono text-xs text-gray-500">3/3</small>Create a
     Project
   </h2>
@@ -120,7 +120,7 @@ const { latestVersion } = Astro.props
 </div>
 
 <div class="prose dark:prose-invert">
-  <h2 class="text-3xl mt-24 dark:text-white">Explore & Enjoy!</h2>
+  <h2 class="text-3xl mt-24">Explore & Enjoy!</h2>
 
   <p>
     Take a peek at your project’s new <code>.ddev/</code> directory. You can add
