--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -68,7 +68,7 @@ const releaseData = await getReleases()
         </PostBody>
       </div>
       <div class="mt-16 lg:mt-0 lg:w-1/3 lg:pl-16">
-        <ul class="flex flex-wrap lg:block">
+        <ul class="flex flex-wrap lg:block dark:text-white">
           <li class="mb-4 p-6 lg:p-0">
             <span class="text-5xl font-thin"
               >{parseInt(5000).toLocaleString("en-US")}+</span
