Fixes The Getting Started tab panels

--- a/src/components/Heading.astro
+++ b/src/components/Heading.astro
@@ -42,7 +42,7 @@ const { title, subtitle, date, author, authorUrl, authorAvatar, readTime } =
           )}
           {author && (
             <div class={authorAvatar ? `ml-1 dark:text-white` : ``}>
-              <a href={authorUrl}>{author}</a>
+              <a class="dark:text-white" href={authorUrl}>{author}</a>
             </div>
           )}
         </div>
