--- a/src/components/Tabs.astro
+++ b/src/components/Tabs.astro
@@ -49,7 +49,7 @@ order.map((label) => {
       @apply text-black dark:text-gray-300;
 
       span {
-        @apply border-solid border-black dark:text-gray-300;
+        @apply border-solid border-black dark:border-gray-300;
       }
     }
   }
@@ -60,13 +60,6 @@ order.map((label) => {
     &.active {
       @apply block;
     }
-  }
-  @media (prefers-color-scheme: dark) {
-    .panel.active {
-      @apply dark:bg-slate-600;
-      box-shadow: none;
-    }
-
   }
 
 </style>
