Add dark theme (#102)
* ddev darkmode version version 1.

* ddev darkmode version version 2.0.

* ddev darkmode version version 3.0 fixed bugs with get started pages and the blogs.

* ddev darkmode 3.1 fixes.

* ddev darkmode 3.2 fixes.

* Added dark:prose-invert and clean up the code.

* Updated darkmode settings part1.

* Updated darkmode settings part1.1.

* Updated darkmode settings 1.3

* Updated darkmode settings, tweaked logos individually.

* Updated darkmode settings, removed extra dark:text-white that are not needed.

* Added dark ddev logo.

* Added dark version of branded logos.

* Fixes about page stats and paging border.

* Fixes The Getting Started tab panels

--- a/src/components/AppLogos.astro
+++ b/src/components/AppLogos.astro
@@ -20,7 +20,7 @@ const logos = [
         logos.map((logo) => (
           <div class="px-12 py-6">
             <img
-              class={["h-12", ...logo.extraClasses].join(" ")}
+              class={["h-12 dark:invert", ...logo.extraClasses].join(" ")}
               src={logo.src}
               alt={`${logo.name} logo`}
             />
