--- a/src/components/Tabs.astro
+++ b/src/components/Tabs.astro
@@ -46,21 +46,22 @@ order.map((label) => {
     }
 
     &.active {
-      @apply text-black;
+      @apply text-black dark:text-gray-300;
 
       span {
-        @apply border-solid border-black;
+        @apply border-solid border-black dark:border-gray-300;
       }
     }
   }
 
   .panel {
-    @apply hidden px-4 rounded-lg shadow-xl;
+    @apply hidden px-4 rounded-lg shadow-xl dark:bg-transparent dark:shadow-slate-900/50;
 
     &.active {
       @apply block;
     }
   }
+
 </style>
 
 <script>
