--- a/src/components/quickstart/Windows.astro
+++ b/src/components/quickstart/Windows.astro
@@ -9,8 +9,8 @@ export interface Props {
 const { latestVersion } = Astro.props
 ---
 
-<div class="prose">
-  <p class="text-gray-600 mb-16">
+<div class="prose dark:prose-invert">
+  <p class="text-gray-600 mb-16 dark:text-slate-400">
     We’ll use WSL2 with Docker inside since it’s the fastest and most
     straightforward of <a
       href="https://ddev.readthedocs.io/en/latest/users/install/docker-installation/#windows"
@@ -43,7 +43,7 @@ const { latestVersion } = Astro.props
   />
 </div>
 
-<div class="prose">
+<div class="prose dark:prose-invert">
   <h2 class="text-3xl mt-24">
     <small class="block font-mono text-xs text-gray-500">2/3</small>Run the
     Install Script
@@ -66,7 +66,7 @@ const { latestVersion } = Astro.props
   />
 </div>
 
-<div class="prose">
+<div class="prose dark:prose-invert">
   <h2 class="text-3xl mt-24">
     <small class="block font-mono text-xs text-gray-500">3/3</small>Create a
     Project
@@ -101,13 +101,14 @@ const { latestVersion } = Astro.props
   <p>
     Now run the <a
       href="https://ddev.readthedocs.io/en/latest/users/usage/commands/#launch"
-      target="_blank">launch command</a
+      target="_blank"
+      >launch command</a
     > to open your project in a browser:
   </p>
   <Terminal type="powershell-ubuntu" code={`$ ddev launch`} />
 </div>
 
-<div class="prose">
+<div class="prose dark:prose-invert">
   <h2 class="text-3xl mt-24">Explore & Enjoy!</h2>
 
   <p>
@@ -116,7 +117,8 @@ const { latestVersion } = Astro.props
       >.ddev/ddev.yaml</code
     > to change <a
       href="https://ddev.readthedocs.io/en/latest/users/configuration/config/"
-      target="_blank">project options</a
+      target="_blank"
+      >project options</a
     >, or even go about your business and pretend this folder doesn’t exist.
   </p>
 
