--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -68,7 +68,7 @@ const releaseData = await getReleases()
         </PostBody>
       </div>
       <div class="mt-16 lg:mt-0 lg:w-1/3 lg:pl-16">
-        <ul class="flex flex-wrap lg:block">
+        <ul class="flex flex-wrap lg:block dark:text-white">
           <li class="mb-4 p-6 lg:p-0">
             <span class="text-5xl font-thin"
               >{parseInt(5000).toLocaleString("en-US")}+</span
@@ -100,14 +100,15 @@ const releaseData = await getReleases()
               }</span
             >
             <span class="block font-mono text-sm">GitHub stars</span>
-            <div class="mt-2 prose">
+            <div class="mt-2  dark:text-slate-400">
               <figure>
                 <img
                   src="https://stars.medv.io/ddev/ddev.svg"
                   alt="Sparkline chart of DDEV’s GitHub stars over time"
                 />
-                <figcaption>
+                <figcaption class="dark:text-slate-400">
                   Project GitHub stars over time, courtesy of <a
+                    class="dark:text-slate-200"
                     href="https://stars.medv.io/"
                     target="_blank">stars.medv.io</a
                   >.
