--- a/src/pages/get-started.astro
+++ b/src/pages/get-started.astro
@@ -29,7 +29,7 @@ const latestRelease = await getLatestReleaseVersion()
 >
   <main class="max-w-4xl mx-auto mb-24">
     <Heading title={title} subtitle={`Install and start using DDEV.`} />
-    <div class="prose mb-16">
+    <div class="prose mb-16 dark:prose-invert">
       <PlatformPicker heading={`Choose your platform:`} />
     </div>
 
