--- a/src/pages/support-ddev.astro
+++ b/src/pages/support-ddev.astro
@@ -24,7 +24,7 @@ const title = `Support DDEV`
     <Heading title={title} subtitle={`We’d love your help!`} />
 
     <div class="px-6 lg:px-0">
-      <div class="prose text-lg mt-0 mb-24">
+      <div class="prose text-lg mt-0 mb-24 dark:prose-invert">
         <p>
           DDEV exists because of the generosity of community members and
           sponsors.<br />
@@ -32,7 +32,7 @@ const title = `Support DDEV`
         </p>
       </div>
 
-      <div class="prose mt-12">
+      <div class="prose mt-12 dark:prose-invert">
         <h2>File an Issue or PR</h2>
 
         <p>
@@ -64,7 +64,7 @@ const title = `Support DDEV`
         />
       </div>
 
-      <div class="prose mt-12">
+      <div class="prose mt-12 dark:prose-invert">
         <h2>Sponsor Development</h2>
         <p>
           We’re grateful for our sponsors, and all contributions to the DDEV
@@ -87,7 +87,7 @@ const title = `Support DDEV`
         />
       </div>
 
-      <div class="prose mt-12">
+      <div class="prose mt-12 dark:prose-invert">
         <h2>Help Others</h2>
         <p>
           There’s no shortage of questions on Discord, GitHub, and Stack
@@ -116,11 +116,11 @@ const title = `Support DDEV`
         />
       </div>
 
-      <div class="prose mt-12">
+      <div class="prose mt-12 dark:prose-invert">
         <h2>Improve the Docs</h2>
         <p>
           It doesn’t matter whether you’ve found a typo, can wordsmith something
-          to better explain or fit <a
+          to better explain or fit <a class="dark:text-slate-200"
             href="https://ddev.readthedocs.io/en/latest/developers/writing-style-guide/"
             target="_blank">our style guide</a
           >, or you’d like to suggest an entirely new section or use case. We’d
@@ -155,7 +155,7 @@ const title = `Support DDEV`
         />
       </div>
 
-      <div class="prose mt-12">
+      <div class="prose mt-12 dark:prose-invert">
         <h2>Spread the Word</h2>
         <p>
           If you like using DDEV, don’t keep it to yourself! Star the project <a
@@ -165,18 +165,18 @@ const title = `Support DDEV`
           video.
         </p>
 
-        <blockquote class="twitter-tweet">
+        <blockquote class="twitter-tweet dark:prose-invert">
           <p lang="en" dir="ltr">
-            <a
+            <a class="dark:text-slate-200"
               href="https://twitter.com/hashtag/fedora?src=hash&ref_src=twsrc%5Etfw"
               >#fedora</a
-            > 36 (just upgraded from 35) still happily runs <a
+            > 36 (just upgraded from 35) still happily runs <a class="dark:text-slate-200"
               href="https://twitter.com/hashtag/ddev?src=hash&ref_src=twsrc%5Etfw"
               >#ddev</a
-            > , one of my most used tools. <a href="https://t.co/9dPAs8BTqg"
+            > , one of my most used tools. <a  class="dark:text-slate-200" href="https://t.co/9dPAs8BTqg"
               >pic.twitter.com/9dPAs8BTqg</a
             >
-          </p>&mdash; Novák Áron (@NovakAron) <a
+          </p>&mdash; Novák Áron (@NovakAron) <a class="dark:text-slate-200"
             href="https://twitter.com/NovakAron/status/1541396362885054465?ref_src=twsrc%5Etfw"
             >June 27, 2022</a
           >
@@ -197,7 +197,7 @@ const title = `Support DDEV`
         />
       </div>
 
-      <div class="prose mt-12">
+      <div class="prose mt-12 dark:prose-invert">
         <h2>Join the Advisory Group</h2>
         <p>
           We meet regularly to discuss DDEV’s present and future. You’re welcome
