--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -20,6 +20,36 @@ footer {
   }
 }
 
+@media (prefers-color-scheme: dark){
+  
+  header {
+    a[target="_blank"] {
+      &::after {
+        @apply inline-block w-3 h-3 ml-1 relative;
+        content: "";
+        top: 1px;
+        filter: invert(42%) sepia(93%) saturate(1352%) hue-rotate(87deg) brightness(119%) contrast(119%);
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke-width='1.5' stroke='currentColor' class='w-6 h-6'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M13.5 6H5.25A2.25 2.25 0 003 8.25v10.5A2.25 2.25 0 005.25 21h10.5A2.25 2.25 0 0018 18.75V10.5m-10.5 6L21 3m0 0h-5.25M21 3v5.25' /%3E%3C/svg%3E");
+      }
+    }
+  }
+
+  footer {
+    ul a[target="_blank"] {
+      &::after {
+        content: "";
+        @apply inline-block w-3 h-3 ml-0 relative opacity-25;
+        top: 1px;
+        filter: invert(42%) sepia(93%) saturate(1352%) hue-rotate(87deg) brightness(119%) contrast(119%);
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke-width='1.5' stroke='currentColor' class='w-6 h-6'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M13.5 6H5.25A2.25 2.25 0 003 8.25v10.5A2.25 2.25 0 005.25 21h10.5A2.25 2.25 0 0018 18.75V10.5m-10.5 6L21 3m0 0h-5.25M21 3v5.25' /%3E%3C/svg%3E");
+      }
+    }
+  }
+}
+
+
+
+
 /* Alt text styling for a not-yet-loaded image */
 img {
   @apply font-mono text-sm text-gray-500;
