--- a/src/pages/foundation.astro
+++ b/src/pages/foundation.astro
@@ -18,7 +18,7 @@ const title = `DDEV Foundation`
             The DDEV Foundation, a Colorado (USA) nonprofit corporation, is the developer of <a href="https://ddev.com">DDEV</a>. It was formerly named the Localdev Foundation. It serves as the fiscal entity for the project and owns the bank account, etc. For more, see <a href="/about">About DDEV</a>.
           </p>
           <p>
-            The DDEV Foundation will be applying for US 501(c)(3) non-profit status in 2023.
+            The DDEV Foundation applied for US 501(c)(3) non-profit status in 2023.
           </p>
 
           <h2>Where does the money go?</h2>
