--- a/src/components/Contributors.astro
+++ b/src/components/Contributors.astro
@@ -1,6 +1,7 @@
 ---
 import { getContributors } from "../lib/api.js"
-import { Img } from "astro-imagetools/components"
+import { Image } from 'astro:assets';
+
 import FeaturedSponsors from "./FeaturedSponsors.astro"
 import Sponsors from "./Sponsors.astro"
 
@@ -27,17 +28,12 @@ const contributors = await getContributors()
             href={contributor.html_url}
             target="_blank"
           >
-            <Img
+            <Image
               src={contributor.avatar_url}
               alt={`${contributor.login} GitHub avatar`}
               width={100}
               height={100}
-              breakpoints={{ count: 1, maxWidth: 100 }}
-              attributes={{
-                img: {
-                  class: `block w-full h-full`,
-                },
-              }}
+              class="block w-full h-full"
             />
           </a>
         ))
