--- a/src/components/Sponsors.astro
+++ b/src/components/Sponsors.astro
@@ -7,7 +7,7 @@
  */
 
 import { getSponsors } from "../lib/api"
-import { Img } from "astro-imagetools/components"
+import { Image } from 'astro:assets';
 import featuredSponsors from "../featured-sponsors.json"
 
 export interface Props {
@@ -86,21 +86,16 @@ gitHubSponsors.forEach((gitHubSponsor) => {
               alt={sponsor.imageAlt}
               width={100}
               height={100}
-              class={`block w-full h-full  dark:bg-white`}
+              class={`block w-full h-full dark:bg-white`}
             />
           )}
           {!sponsor.imageUrl.includes(".svg") && (
-            <Img
+            <Image
               src={sponsor.imageUrl}
               alt={sponsor.imageAlt}
               width={100}
               height={100}
-              breakpoints={{ count: 1, maxWidth: 100 }}
-              attributes={{
-                img: {
-                  class: `block w-full h-full dark:bg-white`,
-                },
-              }}
+              class="block w-full h-full dark:bg-white"
             />
           )}
         </a>
