Added changes as requested on PR review v1.

--- a/src/components/Heading.astro
+++ b/src/components/Heading.astro
@@ -73,7 +73,7 @@ const { title, subtitle, date, author, authorUrl, authorAvatar, readTime, editUr
     </p>
     {
       editUrl && (
-        <a class="flex dark:text-white pl-1 sm:pl-4" href={editUrl} target="_blank">
+        <a class="flex dark:text-white pl-1 sm:pl-4 items-center sm:ml-auto font-serif hover:underline" href={editUrl} target="_blank">
         <svg
           aria-hidden="true"
           focusable="false"
@@ -83,8 +83,8 @@ const { title, subtitle, date, author, authorUrl, authorAvatar, readTime, editUr
           role="img"
           xmlns="http://www.w3.org/2000/svg"
           viewBox="0 0 512 512"
-          height="1em"
-          width="1em"
+          height="0.8em"
+          width="0.8em"
         >
           <path
             fill="currentColor"
