Added changes as requested on PR review v2.

--- a/src/components/Heading.astro
+++ b/src/components/Heading.astro
@@ -44,7 +44,7 @@ const { title, subtitle, date, author, authorUrl, authorAvatar, readTime, editUr
           )}
           {author && (
             <div class={authorAvatar ? `ml-1 dark:text-white` : ``}>
-              <a class="dark:text-white" href={authorUrl}>{author}</a>
+              <a class="dark:text-white hover:underline" href={authorUrl}>{author}</a>
             </div>
           )}
         </div>
