Updated config based on feedback.

--- a/src/components/Heading.astro
+++ b/src/components/Heading.astro
@@ -73,7 +73,7 @@ const { title, subtitle, date, author, authorUrl, authorAvatar, readTime, editUr
     </p>
     {
       editUrl && (
-        <a class="flex dark:text-white pl-1 sm:pl-4 items-center sm:ml-auto font-serif hover:underline" href={editUrl} target="_blank">
+        <a class="flex dark:text-white pl-1 sm:pl-4 items-center sm:ml-auto font-sans hover:underline" href={editUrl} target="_blank">
         <svg
           aria-hidden="true"
           focusable="false"
