Add a blog edit link (#110)
* Adds an edit button to blog posts.

* Fixes a few glitches with the edit button.

* Added changes as requested on PR review v1.

* Added changes as requested on PR review v2.

* Updated config based on feedback.

--- a/src/components/Heading.astro
+++ b/src/components/Heading.astro
@@ -17,9 +17,11 @@ export interface Props {
   authorAvatar?: string
   // Human-formatted read time (used for blog posts)
   readTime?: string
+  // Human-formatted read time (used for blog posts)
+  editUrl?: string
 }
 
-const { title, subtitle, date, author, authorUrl, authorAvatar, readTime } =
+const { title, subtitle, date, author, authorUrl, authorAvatar, readTime, editUrl } =
   Astro.props
 ---
 
@@ -42,7 +44,7 @@ const { title, subtitle, date, author, authorUrl, authorAvatar, readTime } =
           )}
           {author && (
             <div class={authorAvatar ? `ml-1 dark:text-white` : ``}>
-              <a class="dark:text-white" href={authorUrl}>{author}</a>
+              <a class="dark:text-white hover:underline" href={authorUrl}>{author}</a>
             </div>
           )}
         </div>
@@ -64,10 +66,34 @@ const { title, subtitle, date, author, authorUrl, authorAvatar, readTime } =
         readTime && (
           <span>
             {" "}
-            <span aria-hidden="true"> ·</span> {readTime}
+            <span aria-hidden="true"> · </span> {readTime}
           </span>
         )
       }
     </p>
+    {
+      editUrl && (
+        <a class="flex dark:text-white pl-1 sm:pl-4 items-center sm:ml-auto font-sans hover:underline" href={editUrl} target="_blank">
+        <svg
+          aria-hidden="true"
+          focusable="false"
+          data-prefix="fas"
+          data-icon="pen"
+          class="svg-inline--fa fa-pen fa-w-16"
+          role="img"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 512 512"
+          height="0.8em"
+          width="0.8em"
+        >
+          <path
+            fill="currentColor"
+            d="M290.74 93.24l128.02 128.02-277.99 277.99-114.14 12.6C11.35 513.54-1.56 500.62.14 485.34l12.7-114.22 277.9-277.88zm207.2-19.06l-60.11-60.11c-18.75-18.75-49.16-18.75-67.91 0l-56.55 56.55 128.02 128.02 56.55-56.55c18.75-18.76 18.75-49.16 0-67.91z"
+          ></path>
+        </svg>
+        <span class="pl-2">Edit this page</span>
+      </a>
+      )
+    }
   </div>
 </div>
