Updated repository list.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,12 +44,12 @@ const jsonUrl = new URL(`/blog/feed.json`, Astro.site).toString()
             description="Official DDEV development and issues."
           />
           <RepoCard
-            name="ddev/ddev-contrib"
-            description="Vetted, user-contributed recipes for using and extending DDEV."
+            name="ddev/ddev-addon-template"
+            description="A template for providing DDEV add-ons and services."
           />
           <RepoCard
-            name="ddev/awesome-ddev"
-            description="External resources, blog posts, recipes, screencasts, and more."
+            name="ddev/ddev.com"
+            description="Astro source code used to generate ddev.com."
           />
         </div>
       </div>
