--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,7 +45,7 @@ const jsonUrl = new URL(`/blog/feed.json`, Astro.site).toString()
           />
           <RepoCard
             name="ddev/ddev-addon-template"
-            description="A template for providing DDEV add-ons and services."
+            description="A template for DDEV add-ons and services."
           />
           <RepoCard
             name="ddev/ddev.com"
