Adds featured-sponsors-darkmode.svg to fix darkmode sponsors on ddev/ddev.

--- a/src/components/FeaturedSponsors.astro
+++ b/src/components/FeaturedSponsors.astro
@@ -7,16 +7,15 @@ import featuredSponsors from "../featured-sponsors.json"
  * you need to add one.
  */
 const nudges = {
-  "Platform.sh": "mt-12 h-11 dark:invert",
+  "Platform.sh": "mt-12 h-11",
   Tag1: "h-9",
   "Oliver Wand": "h-12 w-12",
-  DrupalEasy: "h-10 dark:invert",
-  b13: "dark:invert",
+  DrupalEasy: "h-10",
   "Redfin Solutions": "h-16 w-16",
   MacStadium: "h-15",
   Lullabot: "h-9",
   "Craft CMS": "h-11",
-  undpaul: "h-9 dark:invert",
+  undpaul: "h-9",
   "1xINTERNET": "h-11",
 }
 
