add link to training in footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -25,6 +25,7 @@ const navigation = {
   product: [
     { name: "About", href: "/about" },
     { name: "Contributing", href: "/support-ddev" },
+    { name: "Contributor Live Training", href: "/blog/contributor-training"},
     { name: "Blog", href: "/blog" },
     { name: "Foundation", href: "/foundation" },
     { name: "Newsletter", href: "/newsletter"},
