--- a/src/pages/support-ddev.astro
+++ b/src/pages/support-ddev.astro
@@ -32,17 +32,17 @@ const title = `Support DDEV`
         </p>
         <p>There are many different ways help:</p>
         <ul>
-          <li><a href="#file_an_issue_or_pr">File an Issue or PR</a></li>
-          <li><a href="#sponsor_development">Sponsor Development</a></li>
-          <li><a href="#help_others">Help Others</a></li>
-          <li><a href="#improve_the_docs">Improve the Docs</a></li>
-          <li><a href="#spread_the_word">Spread the Word</a></li>
-          <li><a href="#join_the_advisory_group">Join the Advisory Group</a></li>
+          <li><a href="#file-an-issue-or-pr">File an Issue or PR</a></li>
+          <li><a href="#sponsor-development">Sponsor Development</a></li>
+          <li><a href="#help-others">Help Others</a></li>
+          <li><a href="#improve-the-docs">Improve the Docs</a></li>
+          <li><a href="#spread-the-word">Spread the Word</a></li>
+          <li><a href="#join-the-advisory-group">Join the Advisory Group</a></li>
         </ul>
       </div>
 
       <div class="prose mt-12 dark:prose-invert">
-        <h2 id="file_an_issue_or_pr">File an Issue or PR</h2>
+        <h2 id="file-an-issue-or-pr">File an Issue or PR</h2>
 
         <p>
           If you have an idea, a bug report, or code to contribute, please take
@@ -74,7 +74,7 @@ const title = `Support DDEV`
       </div>
 
       <div class="prose mt-12 dark:prose-invert">
-        <h2 id="sponsor_development">Sponsor Development</h2>
+        <h2 id="sponsor-development">Sponsor Development</h2>
         <p>
           We’re grateful for our sponsors, and all contributions to the DDEV
           Foundation go entirely toward development. We can always use resources
@@ -97,7 +97,7 @@ const title = `Support DDEV`
       </div>
 
       <div class="prose mt-12 dark:prose-invert">
-        <h2 id="help_others">Help Others</h2>
+        <h2 id="help-others">Help Others</h2>
         <p>
           There’s no shortage of questions on Discord, GitHub, and Stack
           Overflow. If you can help someone out, it helps us focus more on
@@ -126,7 +126,7 @@ const title = `Support DDEV`
       </div>
 
       <div class="prose mt-12 dark:prose-invert">
-        <h2 id="improve_the_docs">Improve the Docs</h2>
+        <h2 id="improve-the-docs">Improve the Docs</h2>
         <p>
           It doesn’t matter whether you’ve found a typo, can wordsmith something
           to better explain or fit <a class="dark:text-slate-200"
@@ -165,7 +165,7 @@ const title = `Support DDEV`
       </div>
 
       <div class="prose mt-12 dark:prose-invert">
-        <h2 id="spread_the_word">Spread the Word</h2>
+        <h2 id="spread-the-word">Spread the Word</h2>
         <p>
           If you like using DDEV, don’t keep it to yourself! Star the project <a
             href={GITHUB_URL}
@@ -207,7 +207,7 @@ const title = `Support DDEV`
       </div>
 
       <div class="prose mt-12 dark:prose-invert">
-        <h2 id="join_the_advisory_group">Join the Advisory Group</h2>
+        <h2 id="join-the-advisory-group">Join the Advisory Group</h2>
         <p>
           We meet regularly to discuss DDEV’s present and future. You’re welcome
           to join us!
