--- a/src/pages/support-ddev.astro
+++ b/src/pages/support-ddev.astro
@@ -233,6 +233,22 @@ const title = `Support DDEV`
           target="_blank"
         />
       </div>
+
+      <div class="prose mt-12 dark:prose-invert">
+        <h2>Contributor Live Training</h2>
+        <p>
+          Live training sessions are held weekly on Tuesdays at 8am US MT, 5pm CET or CEST. The trainings are recorded for everybody’s benefit.
+        </p>
+      </div>
+
+      <div class="mt-8 mb-24 lg:flex lg:w-2/5">
+        <CtaButton
+          text="View training sessions →"
+          href={`/blog/contributor-training`}
+          type="hollow"
+          target="_blank"
+        />
+      </div>
     </div>
   </main>
 </Layout>
